--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,17 @@
-<p>
-  home works!
-</p>
+<div class="container">
+  <nav class="nav navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <p>HelpMe</p>
+      </div>
+
+      <div class="nav navbar-nav navbar-right">
+          <a (click)="onLogout()">
+              <i class="glyphicon glyphicon-off"></i> Sair
+            </a>
+      </div>
+    </div>
+
+    
+  </nav>
+</div>
